--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -41,6 +41,8 @@
     </ol>
 
     <P><strong><em>and here you go bon appetite</em></strong></P>
+    <a href="lasagna.html">back to top</a>
+    <a href="../index.html">Return to main</a>
 
 </body>
 </html>
