--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -41,8 +41,9 @@
     </ol>
 
     <P><strong><em>and here you go bon appetite</em></strong></P>
-    <a href="lasagna.html">back to top</a>
-    <a href="../index.html">Return to main</a>
+        <a href="lasagna.html"><p>back to top</p></a>
+        <a href="../index.html"><p>Return to main</p></a>
+
 
 </body>
 </html>
