--- a/recipes/lasagna2.html
+++ b/recipes/lasagna2.html
@@ -42,5 +42,7 @@
 </ol>
 
 <p><strong><em>and here you go bon appetite</em></strong></p> 
+    <a href="lasagna2.html"><p>back to top</p></a>
+    <a href="../index.html"><p>Return to main</p></a>
 </body>
 </html>
