--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipies</title>
+    <link rel="stylesheet" href="styles.css">                                  <!--styles of the webpage-->
+
 </head>
 <body>
     
-    <h1>Odin Recipies</h1>
+    <h1 id="main-line">Odin Recipies</h1>
+     <img src="Images/Realistic Fast Food.jpg" alt="photo 1" class="center">  
     <ul>
-        <a href="recipes/lasagna.html"><h2><li>Brena's Lasagna</li></h2></a>
-        <a href="recipes/lasagna2.html"><h2><li>Hearty Vegetable Lasagna</li></h2></a>
+        <a href="recipes/lasagna.html"><h2 class="Headings"><li>Brena's Lasagna</li></h2></a>
+        <a href="recipes/lasagna2.html"><h2 class="Headings"><li>Hearty Vegetable Lasagna</li></h2></a>
     </ul>
     
 
