--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brenda's Lasagna Recipie</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Brenda's Lasagna</h1>
-    <img src="../Images/image.jpeg" alt="Recipe photo">
+    <h1 id="Header">Brenda's Lasagna</h1>
+    <img src="../Images/image.jpeg" alt="Recipe photo" class="center">
     <h2>Description</h2>
-    <p>This is faster , and less expesive lasagna</p>
+    <p class="paragraph">This is faster , and less expesive lasagna</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 (16 ounce) package lasagna noodles</li>
@@ -25,24 +26,24 @@
     <h2>Steps</h2>
     <ol>
         <li><strong>step 1</strong></li>
-        <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
+        <p class="paragraph">Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
 
         <li><strong>step 2</strong></li>
-        <p>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper.drain
+        <p class="paragraph">Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper.drain
         Stir in spaghetti sauce and garlic and simmer 5 minutes.</p>
 
         <li><strong>step 3</strong></li>
-        <p>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture
+        <p class="paragraph">In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture
          and cheese mixture until pan is filled.</p>
 
          <li><strong>step 4</strong></li>
-         <p>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
+         <p class="paragraph">Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
 
     </ol>
 
-    <P><strong><em>and here you go bon appetite</em></strong></P>
-        <a href="lasagna.html"><p>back to top</p></a>
-        <a href="../index.html"><p>Return to main</p></a>
+    <P class="paragraph"><strong><em>and here you go bon appetite!</em></strong></P>
+        <a href="#Header"><p>back to top</p></a>
+        <a href="../index.html"><p id="return">Return to main</p></a>
 
 </body>
 </html>
