--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <h1 id="main-line">Odin Recipies</h1>
      <img src="Images/Realistic Fast Food.jpg" alt="photo 1" class="center">  
     <ul>
-        <a href="recipes/lasagna.html"><h2 class="Headings"><li>Brena's Lasagna</li></h2></a>
-        <a href="recipes/lasagna2.html"><h2 class="Headings"><li>Hearty Vegetable Lasagna</li></h2></a>
+        <a href="recipes/lasagna.html"><h2 class="home-headings"><li>Brena's Lasagna</li></h2></a>
+        <a href="recipes/lasagna2.html"><h2 class="home-headings"><li>Hearty Vegetable Lasagna</li></h2></a>
     </ul>
     
 
