fix-backToTo-2ndRecipie

--- a/recipes/lasagna2.html
+++ b/recipes/lasagna2.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<h1>Hearty Vegetable Lasagna</h1>
+<h1 id="back">Hearty Vegetable Lasagna</h1>
 <img src="../Images/HVL.jpg" alt="Hearty Vegetable Lasagna picture">
-<h2 id="Back">Description</h2>
+<h2 >Description</h2>
 <p class="paragraph">This hearty, vegetable lasagna is the only lasagna my husband will eat. We love it!!! Hope you all enjoy as much as we do.</P>
 <h2>Ingredients</h2>
 <ul>
