--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 
 </head>
 <body>
-<div class="main-page-content">
+    <div class="main-page-content">
     <h1 id="main-line">Odin Recipies</h1>
-     <img src="Images/Realistic Fast Food.jpg" alt="photo 1" class="center">  
-    <ul>
-        <a href="recipes/lasagna.html"><h2 class="home-headings"><li>Brena's Lasagna</li></h2></a>
-        <a href="recipes/lasagna2.html"><h2 class="home-headings"><li>Hearty Vegetable Lasagna</li></h2></a>
-    </ul>
-</div>  
-    
-    
-
+    <img src="Images/Realistic Fast Food.jpg" alt="photo 1" class="center">  
+        <ul>
+            <a href="recipes/lasagna.html">
+                <li class="home-headings">Brena's Lasagna</li>
+            </a>
+            <a href="recipes/lasagna2.html">
+                <li class="home-headings">Hearty Vegetable Lasagna</li>
+            </a>
+        </ul>
+    </div>  
 </body>
 </html>
