--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,42 +8,49 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<div class="main-page-content">
     <h1 id="Header">Brenda's Lasagna</h1>
-    <img src="../Images/image.jpeg" alt="Recipe photo" class="center">
+    <figure>
+        <img src="../Images/image.jpeg" alt="Recipe photo" class="center">
+            <figcaption>Brenda's Lasagna</figcaption>
+    </figure>
     <h2>Description</h2>
-    <p class="paragraph">This is faster , and less expesive lasagna</p>
+    <ul>
+        <li>This is faster , and less expesive lasagna</li>
+    </ul>
     <h2>Ingredients</h2>
     <ul>
-        <li>1 (16 ounce) package lasagna noodles</li>
-        <li>1 pound lean ground beef</li>
-        <li>salt and pepper to taste</li>
-        <li>1 (16 ounce) jar spaghetti sauce</li>
-        <li>1 clove garlic, minced</li>
-        <li>½ pound shredded mozzarella cheese</li>
-        <li>½ pound shredded Cheddar chees</li>
-        <li>1 pint ricotta cheese</li>
+        <div class="Ingredients">
+            <li>1 (16 ounce) package lasagna noodles</li>
+            <li>1 pound lean ground beef</li>
+            <li>salt and pepper to taste</li>
+            <li>1 (16 ounce) jar spaghetti sauce</li>
+            <li>1 clove garlic, minced</li>
+            <li>½ pound shredded mozzarella cheese</li>
+            <li>½ pound shredded Cheddar chees</li>
+            <li>1 pint ricotta cheese</li>
+        </div>
     </ul>
     <h2>Steps</h2>
     <ol>
         <li><strong>step 1</strong></li>
-        <p class="paragraph">Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
+        <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
 
         <li><strong>step 2</strong></li>
-        <p class="paragraph">Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper.drain
+        <p>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper.drain
         Stir in spaghetti sauce and garlic and simmer 5 minutes.</p>
 
         <li><strong>step 3</strong></li>
-        <p class="paragraph">In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture
+        <p>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture
          and cheese mixture until pan is filled.</p>
 
          <li><strong>step 4</strong></li>
-         <p class="paragraph">Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
+         <p>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
 
     </ol>
-
-    <P class="paragraph"><strong><em>and here you go bon appetite!</em></strong></P>
-        <a href="#Header"><p>back to top</p></a>
-        <a href="../index.html"><p id="return">Return to main</p></a>
-
+</div>
+<P class="paragraph"><strong><em>and here you go bon appetite!</em></strong></P>
+<a href="#Header"><p>back to top</p></a>
+<a href="../index.html"><p id="return">Return to main</p></a>
 </body>
 </html>
