--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="Images/Realistic Fast Food.jpg" alt="photo 1" class="center">  
         <ul>
             <a href="recipes/lasagna.html">
-                <li class="home-headings">Brena's Lasagna</li>
+                <li>Brena's Lasagna</li>
             </a>
             <a href="recipes/lasagna2.html">
-                <li class="home-headings">Hearty Vegetable Lasagna</li>
+                <li>Hearty Vegetable Lasagna</li>
             </a>
         </ul>
     </div>  
