--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -20,7 +20,7 @@
     </ul>
     <h2>Ingredients</h2>
     <ul>
-        <div class="Ingredients">
+        <div>
             <li>1 (16 ounce) package lasagna noodles</li>
             <li>1 pound lean ground beef</li>
             <li>salt and pepper to taste</li>
