--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -35,22 +35,21 @@
     <ol>
         <li><strong>step 1</strong></li>
         <p>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</p>
-
         <li><strong>step 2</strong></li>
         <p>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper.drain
         Stir in spaghetti sauce and garlic and simmer 5 minutes.</p>
-
         <li><strong>step 3</strong></li>
         <p>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture
          and cheese mixture until pan is filled.</p>
-
          <li><strong>step 4</strong></li>
          <p>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</p>
-
     </ol>
+    <P class="paragraph"><strong><em>and here you go bon appetite!</em></strong></P>
 </div>
-<P class="paragraph"><strong><em>and here you go bon appetite!</em></strong></P>
-<a href="#Header"><p>back to top</p></a>
-<a href="../index.html"><p id="return">Return to main</p></a>
+<div class="return-back">
+    <a href="#Header">back to top</a>
+    <a href="../index.html"><div id="return">Return to main</div></a>
+</div>
+
 </body>
 </html>
