--- a/recipes/lasagna2.html
+++ b/recipes/lasagna2.html
@@ -8,42 +8,48 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<h1 id="back">Hearty Vegetable Lasagna</h1>
-<img src="../Images/HVL.jpg" alt="Hearty Vegetable Lasagna picture">
-<h2 >Description</h2>
-<p class="paragraph">This hearty, vegetable lasagna is the only lasagna my husband will eat. We love it!!! Hope you all enjoy as much as we do.</P>
-<h2>Ingredients</h2>
-<ul>
-    <li>1 (16 ounce) package lasagna noodles</li>
-    <li>1 pound fresh mushrooms, sliced</li>
-    <li>¾ cup chopped green bell pepper </li>
-    <li>¾ cup chopped onion</li>
-    <li>3 cloves garlic, minced </li>
-    <li>2 tablespoons vegetable oil</li>
-    <li>2 (26 ounce) jars pasta sauce</li>
-    <li>1 teaspoon dried basil</li>
-    <li>1 (15 ounce) container part-skim ricotta cheese</li>
-    <li>4 cups shredded mozzarella cheese</li>
-    <li>2 eggs</li>
-    <li>½ cup grated Parmesan cheese </li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li><strong>step 1</strong></li>
-    <p class="paragraph">Cook the lasagna noodles in a large pot of boiling water for 10 minutes, or until al dente. Rinse with cold water, and drain.</p>
-    <li><strong>step 2</strong></li>
-    <p class="paragraph">In a large saucepan, cook and stir mushrooms, green peppers, onion, and garlic in oil. Stir in pasta sauce and basil; bring to a boil. Reduce heat, and simmer 15 minutes.</p>
-    <li><strong>step 3</strong></li>
-    <p class="paragraph">Mix together ricotta, 2 cups mozzarella cheese, and eggs.</p>
-    <li><strong>step 4</strong></li>
-    <p class="paragraph">Preheat oven to 350 degrees F (175 degrees C). Spread 1 cup tomato sauce into the bottom of a greased 9x13 inch baking dish.
-    Layer 1/2 each, lasagna noodles, ricotta mix, sauce, and Parmesan cheese. Repeat layering, and top with remaining 2 cups mozzarella cheese.</p>
-    <li><strong>step 5</strong></li>
-    <p class="paragraph">Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</p>
-</ol>
-
-<p class="paragraph"><strong><em>and here you go bon appetite</em></strong></p> 
+<div class="main-page-content">
+    <h1 id="back">Hearty Vegetable Lasagna</h1>
+    <figure>
+     <img src="../Images/HVL.jpg" alt="Hearty Vegetable Lasagna picture">
+        <figcaption>Hearty Vegetable Lasagna</figcaption>
+    </figure>
+    <h2 >Description</h2>
+    <p class="paragraph">This hearty, vegetable lasagna is the only lasagna my husband will eat. We love it!!! Hope you all enjoy as much as we do.</P>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (16 ounce) package lasagna noodles</li>
+        <li>1 pound fresh mushrooms, sliced</li>
+        <li>¾ cup chopped green bell pepper </li>
+        <li>¾ cup chopped onion</li>
+        <li>3 cloves garlic, minced </li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>2 (26 ounce) jars pasta sauce</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1 (15 ounce) container part-skim ricotta cheese</li>
+        <li>4 cups shredded mozzarella cheese</li>
+        <li>2 eggs</li>
+        <li>½ cup grated Parmesan cheese </li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>step 1</strong></li>
+        <p class="paragraph">Cook the lasagna noodles in a large pot of boiling water for 10 minutes, or until al dente. Rinse with cold water, and drain.</p>
+         <li><strong>step 2</strong></li>
+        <p class="paragraph">In a large saucepan, cook and stir mushrooms, green peppers, onion, and garlic in oil. Stir in pasta sauce and basil; bring to a boil. Reduce heat, and simmer 15 minutes.</p>
+        <li><strong>step 3</strong></li>
+        <p class="paragraph">Mix together ricotta, 2 cups mozzarella cheese, and eggs.</p>
+        <li><strong>step 4</strong></li>
+        <p class="paragraph">Preheat oven to 350 degrees F (175 degrees C). Spread 1 cup tomato sauce into the bottom of a greased 9x13 inch baking dish.
+                            Layer 1/2 each, lasagna noodles, ricotta mix, sauce, and Parmesan cheese. Repeat layering, and top with remaining 2 cups mozzarella cheese.</p>
+        <li><strong>step 5</strong></li>
+        <p class="paragraph">Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</p>
+    </ol>
+    <p class="paragraph"><strong><em>and here you go bon appetite!</em></strong></p> 
+</div>
+<div class="return-back">
     <a href="#back"><p class="paragraph">back to top</p></a>
     <a href="../index.html"><p class="paragraph">Return to main</p></a>
+</div>
 </body>
 </html>
