styles&fonts-updated

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipies</title>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine">         <!-- font ref -->
     <link rel="stylesheet" href="styles.css">                                  <!--styles of the webpage-->
 
 </head>
 <body>
     <div class="main-page-content">
     <h1 id="main-line">Odin Recipies</h1>
-    
         <ul>
             <a href="recipes/lasagna.html">
                 <li>Brena's Lasagna</li>
